--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
   <section class="main-section container-fluid">
     <h1 class="main-title">Hallo! Ik ben <span class="title-span"><i>Zzzumi</i></span></h1>
 
-        <img src="images/zzzumi.png" class="img-zzzumi" id="zzzumi" alt="Plaatje Zzzumi in zijn bol" role="navigation" title="Koop het boek"/>
-        <div class="span-container">
-          <h1 class="mobile-title">Hallo! </h1>
-          <h1 class="mobile-title2">Ik ben</h1>
-          <h1 class="mobile-span">Zzzumi </h1>
-        </div>
+    <img src="images/zzzumi.png" class="img-zzzumi" id="zzzumi" alt="Plaatje Zzzumi in zijn bol" role="navigation" title="Koop het boek" />
 
-        <!-- <div class="circles">
+    <!-- <div class="circles">
           <svg class="pulse1" viewbox="0 0 150 150">
             <circle class="circle1" cx="75" cy="75s" r="75px" stroke="#2E2A71" stroke-width="10" fill="none" />
           </svg>
@@ -40,77 +35,74 @@
             <circle class="circle2" cx="20em" cy="20em" r="11em" stroke="#664F76" stroke-width="15" fill="none" />
           </svg>
         </div> -->
-        <div class="circle-container">
-          <svg class="pulse1" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet">
-            <circle class="circle1" cx="50" cy="50" r="40" stroke="#2E2A71" stroke-width="8" fill="none"/>
-          </svg>
+    <div class="circle-container">
+      <svg class="pulse1" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet">
+        <circle class="circle1" cx="50" cy="50" r="40" stroke="#2E2A71" stroke-width="8" fill="none" />
+      </svg>
 
-        </div>
-        <div class="circle-container">
+    </div>
+    <div class="circle-container">
 
-          <svg class="pulse2" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet">
-            <circle class="circle2" cx="50" cy="50" r="40" stroke="#664F76" stroke-width="15" fill="none"/>
-          </svg>
-        </div>
+      <svg class="pulse2" version="1.1" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet">
+        <circle class="circle2" cx="50" cy="50" r="40" stroke="#664F76" stroke-width="15" fill="none" />
+      </svg>
+    </div>
 
 
-    <div class="navigation-link wie" >
-        <img src="images/geel.png" class="img-bol geel" alt="Klik hier om te lezen wie Zzzumi is" role="navigation" id="geel">
-        <p class="navigation-text hide-text" id="geel-text">
-          Wie is Zzzumi?
-        </p>
+    <div class="navigation-link wie">
+      <img src="images/geel.png" class="img-bol geel" alt="Klik hier om te lezen wie Zzzumi is" role="navigation" id="geel">
+      <p class="navigation-text hide-text" id="geel-text">
+        Wie is Zzzumi?
+      </p>
     </div>
     <div class="navigation-link behang" id="">
-        <img src="images/blauw.png" class="img-bol blauw" alt="Klik hier om te lezen wat je kan doen met het statische behang'" role="navigation" id="blauw">
-        <p class="navigation-text hide-text" id="blauw-text">
-           Wat kan je doen met het statische behang?
-        </p>
+      <img src="images/blauw.png" class="img-bol blauw" alt="Klik hier om te lezen wat je kan doen met het statische behang'" role="navigation" id="blauw">
+      <p class="navigation-text hide-text" id="blauw-text">
+        Wat kan je doen met het statische behang?
+      </p>
     </div>
     <div class="navigation-link schrijver" id="">
-          <img src="images/groen.png" class="img-bol groen" alt="Klik hier om meer over de schrijver te lezen" role="navigation" id="groen">
-        <p class="navigation-text hide-text" id="groen-text">
-           Alles over de schrijver
-        </p>
+      <img src="images/groen.png" class="img-bol groen" alt="Klik hier om meer over de schrijver te lezen" role="navigation" id="groen">
+      <p class="navigation-text hide-text" id="groen-text">
+        Alles over de schrijver
+      </p>
     </div>
     <div class="navigation-link spel" id="">
-            <img src="images/oranje.png" class="img-bol oranje" alt="Klik hier om zelf een nieuw spel te verzinnen voor Zzzumi" role="navigation" id="oranje">
-        <p class="navigation-text hide-text" id="oranje-text">
-           Verzin een nieuw spel
-        </p>
+      <img src="images/oranje.png" class="img-bol oranje" alt="Klik hier om zelf een nieuw spel te verzinnen voor Zzzumi" role="navigation" id="oranje">
+      <p class="navigation-text hide-text" id="oranje-text">
+        Verzin een nieuw spel
+      </p>
     </div>
     <div class="navigation-link sterren" id="">
-            <img src="images/paars.png" class="img-bol paars" alt="Klik hier om de sterrenhemel te laten groeien" role="navigation" id="paars">
-        <p class="navigation-text hide-text" id="paars-text">
-           Maak meer sterren
-        </p>
+      <img src="images/paars.png" class="img-bol paars" alt="Klik hier om de sterrenhemel te laten groeien" role="navigation" id="paars">
+      <p class="navigation-text hide-text" id="paars-text">
+        Maak meer sterren
+      </p>
     </div>
     <div class="navigation-link kleurplaat" id="">
-        <img src="images/rood.png" class="img-bol rood" alt="Klik hier om naar de kleurplaat te gaan" role="navigation" id="red">
-        <p class="navigation-text hide-text" id="rood-text">
-           Download de kleurplaat
-        </p>
+      <img src="images/rood.png" class="img-bol rood" alt="Klik hier om naar de kleurplaat te gaan" role="navigation" id="red">
+      <p class="navigation-text hide-text" id="rood-text">
+        Download de kleurplaat
+      </p>
     </div>
     <div class="navigation-link luisterboek" id="">
-        <img src="images/teal.png" class="img-bol teal" alt="Klik hier om naar het voorgelezen boek te gaan" role="navigation" id="teal">
-        <p class="navigation-text hide-text" id="teal-text">
-           Naar het luisterboek
-        </p>
+      <img src="images/teal.png" class="img-bol teal" alt="Klik hier om naar het voorgelezen boek te gaan" role="navigation" id="teal">
+      <p class="navigation-text hide-text" id="teal-text">
+        Naar het luisterboek
+      </p>
     </div>
 
 
-    <!-- <img src="images/geel.png" class="img-bol geel" alt="Klik hier om te lezen wie Zzzumi is" role="navigation" title="Wie is Zzzumi?"> -->
-    <!-- <img src="images/blauw.png" class="img-bol blauw" alt="Klik hier om te lezen wat je kan doen met het statische behang'" role="navigation"> -->
-    <!-- <img src="images/groen.png" class="img-bol groen" alt="Klik hier om meer over de schrijver te lezen" role="navigation"> -->
-    <!-- <img src="images/oranje.png" class="img-bol oranje" alt="Klik hier om zelf een nieuw spel te verzinnen voor Zzzumi" role="navigation"> -->
-    <!-- <img src="images/paars.png" class="img-bol paars" alt="Klik hier om de sterrenhemel te laten groeien" role="navigation"> -->
-    <!-- <img src="images/rood.png" class="img-bol rood" alt="Klik hier om naar de kleurplaat te gaan" role="navigation"> -->
-    <!-- <img src="images/teal.png" class="img-bol teal" alt="Klik hier om naar het voorgelezen boek te gaan" role="navigation"> -->
-    <!-- <img src="images/zzzumi.png" class="img-zzzumi" id="zzzumi" alt="Plaatje Zzzumi in zijn bol" role="navigation" title="Koop het boek"/> -->
+
 
 
 
   </section>
-
+  <div class="span-container">
+    <h1 class="mobile-title">Hallo! </h1>
+    <h1 class="mobile-title2">Ik ben</h1>
+    <h1 class="mobile-title mobile-span">Zzzumi </h1>
+  </div>
   <section id="over-zzzumi" class="section-dark sub-section container-fluid">
     <div class="row">
       <div class="col-sm-5">
@@ -123,7 +115,7 @@
           Hij was daar helemaal alleen. Hij komt uit een groen eitje.<br />
           Er zijn op zijn planeet nog veel meer eitjes, maar alleen zijn eitje is opengebroken.<br />
           Zzzumi gaat naar de aarde om een oplossing te verzinnen.
-          </p>
+        </p>
       </div>
     </div>
 
@@ -137,16 +129,16 @@
         <h2 class="subsection-heading">Zzzumi gaat naar de aarde</h2>
         <p>
           "Krak, op planeet Booo breekt één eitje open.<br>
-                    Zzzumi kruipt onder een knalgroen eierschaaltje vandaan.<br>
-                    Hij is verdrietig, alleen zijn eitje is open.<br>
-                    Wat hij ook probeert, de andere eitjes blijven dicht.<br>
-                    Misschien vindt hij ergens anders in de ruimte een oplossing om alle eitjes te openen.<br>
-                    Zzzumi gaat naar de aarde.<br>
-                    En beleeft een spannend avontuur."
-          </p>
+          Zzzumi kruipt onder een knalgroen eierschaaltje vandaan.<br>
+          Hij is verdrietig, alleen zijn eitje is open.<br>
+          Wat hij ook probeert, de andere eitjes blijven dicht.<br>
+          Misschien vindt hij ergens anders in de ruimte een oplossing om alle eitjes te openen.<br>
+          Zzzumi gaat naar de aarde.<br>
+          En beleeft een spannend avontuur."
+        </p>
       </div>
       <div class="col-sm-7">
-                <!-- <img class="plaatje-zzzumi" src="images/zzzumi-los.png" alt="plaatje van Zzzumi"> -->
+        <!-- <img class="plaatje-zzzumi" src="images/zzzumi-los.png" alt="plaatje van Zzzumi"> -->
 
       </div>
     </div>
