--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9E5795">
   <meta name="msapplication-TileColor" content="#9E5795">
   <meta name="theme-color" content="#ffffff">
+
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Montserrat&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="image-styles.css">
   <title>Zzzumi!</title>
@@ -103,10 +105,10 @@
     <h1 class="mobile-title2">Ik ben</h1>
     <h1 class="mobile-title mobile-span">Zzzumi </h1>
   </div>
-  <section id="over-zzzumi" class="section-dark sub-section container-fluid">
+  <section id="over-zzzumi" class="section-light sub-section container-fluid">
     <div class="row">
       <div class="col-sm-5">
-
+        <img class="img-fluid img-zzzumi-los" src="images/zzzumi-los.png" alt="Plaatje van Zzzumi">
       </div>
       <div class="col-sm-7">
         <h2 class="subsection-heading">Wie is Zzzumi?</h2>
@@ -116,33 +118,149 @@
           Er zijn op zijn planeet nog veel meer eitjes, maar alleen zijn eitje is opengebroken.<br />
           Zzzumi gaat naar de aarde om een oplossing te verzinnen.
         </p>
+        <h3 class="subsection-heading">Help jij Zzzumi om weer thuis te komen?</h3>
       </div>
     </div>
 
   </section>
 
+  <section class="section-dark sub-section container-fluid">
+    <div class="row">
+      <div class="col-sm-3">
+
+      </div>
+      <div class="col-sm-6">
+        <h3 class="quote">
+          "En dus gaan ze samen op pad. Hugo de Hond, Mies Muis, Karel Konijn, Meneer Mol en Eefje de Eekhoorn"
+        </h3>
+
+      </div>
+      <div class="col-sm-3">
+
+      </div>
+    </div>
+
+  </section>
 
   <section id="boek" class="section-light sub-section container-fluid">
-
     <div class="row">
-      <div class="col-sm-5">
-        <h2 class="subsection-heading">Zzzumi gaat naar de aarde</h2>
-        <p>
-          "Krak, op planeet Booo breekt één eitje open.<br>
-          Zzzumi kruipt onder een knalgroen eierschaaltje vandaan.<br>
-          Hij is verdrietig, alleen zijn eitje is open.<br>
-          Wat hij ook probeert, de andere eitjes blijven dicht.<br>
-          Misschien vindt hij ergens anders in de ruimte een oplossing om alle eitjes te openen.<br>
-          Zzzumi gaat naar de aarde.<br>
-          En beleeft een spannend avontuur."
-        </p>
+      <div class="col-lg-6">
+        <img class="plaatje-boek img-fluid" src="images/kaft.jpg" alt="plaatje van het boek 'zzzumi gaat naar de aarde'">
       </div>
-      <div class="col-sm-7">
-        <!-- <img class="plaatje-zzzumi" src="images/zzzumi-los.png" alt="plaatje van Zzzumi"> -->
+      <div class="col-lg-6">
+          <div class="row">
+            <div class="col-6 logo-container">
+                <img class="logo img-fluid" src="images/logo.png" alt="Logo van goede doel">
+            </div>
+            <div class="col-6 cause-text">
+                <p><strong><em>Zzzumi gaat naar de aarde</em> <br />steunt [naam doel]</strong></p>
+            </div>
+          </div>
 
+
+          <div class="button-boek">
+                <button id="buy-book" class="btn btn-buy" type="button" name="buy">KOOP HET BOEK NU</button>
+                <br />
+                <em>Ook te koop bij:</em><br />
+                <a href="https://www.bol.com" target="_blank"><img class="shop-logos img-fluid" src="images/logo-bol.png" alt="Logo van Bol.com"></a>
+                <a href="https://www.amazon.com" target="_blank"><img class="shop-logos img-fluid" src="images/logo-amazon.png" alt="Logo van Amazon"></a>
+                <a href="https://www.libris.nl/waanders/winkels/" target="_blank"><img class="shop-logos img-fluid" src="images/logo-waanders.jpg" alt="Logo van Waanders"></a>
+                <a href="https://www.ako.nl" target="_blank"><img class="shop-logos img-fluid" src="images/logo-ako.png" alt="Logo van AKO"></a>
+
+          </div>
       </div>
     </div>
+    <div id="payment" class="payment hidden">
+  <div class="container mb-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col"> </th>
+                            <th scope="col">Product</th>
+                            <th scope="col">Beschikbaar</th>
+                            <th scope="col" class="text-center">Aantal</th>
+                            <th scope="col" class="text-right">Prijs</th>
+                            <!-- <th> </th> -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><img class="shop-item" src="images/kaft.jpg" /> </td>
+                            <td>Zzzumi gaat naar de aarde - Hardcover</td>
+                            <td>Op voorraad</td>
+                            <td><input class="form-control" type="text" value="1" /></td>
+                            <td class="text-right">€&nbsp;12</td>
+                            <!-- <td class=""><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td> -->
+                        </tr>
+                        <tr>
+                            <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                            <td>Statisch behang</td>
+                            <td>Op voorraad</td>
+                            <td><input class="form-control" type="text" value="1" /></td>
+                            <td class="text-right">€&nbsp;8</td>
+                            <!-- <td class="text-right"><button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> </button> </td> -->
+                        </tr>
+
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+
+                            <td>Sub-totaal</td>
+                            <td class="text-right">€&nbsp;20</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+
+                            <td>Verzendkosten</td>
+                            <td class="text-right">€&nbsp;6</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+
+                            <td><strong>Totaal</strong></td>
+                            <td class="text-right"><strong> €&nbsp;26</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="col mb-2">
+            <div class="row">
+                <div class="col-sm-12  col-md-6">
+                    <button class="btn btn-paypal">Bestellen via PayPal</button>
+                </div>
+
+                <div class="col-sm-12 col-md-6 text-right">
+                    <button class="btn btn-buy">Bestellen via iDeal</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
   </section>
+
+  <section id="shop" class="section-dark sub-section container-fluid">
+      <div class="row">
+        <div class="col-sm-6">
+        </div>
+        <div class="col-sm-6">
+            <p>
+              Hier wat tekst
+            </p>
+        </div>
+      </div>
+  </section>
+
 
 
 
