--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           Er zijn op zijn planeet nog veel meer eitjes, maar alleen zijn eitje is opengebroken.<br />
           Zzzumi gaat naar de aarde om een oplossing te verzinnen.
         </p>
-        <h3 class="subsection-heading">Help jij Zzzumi om weer thuis te komen?</h3>
+        <h3 class="subsection-heading">Help jij Zzzumi om een oplossing te verzinnen?</h3>
       </div>
     </div>
 
@@ -150,10 +150,11 @@
       <div class="col-lg-6">
           <div class="row">
             <div class="col-6 logo-container">
-                <img class="logo img-fluid" src="images/logo.png" alt="Logo van goede doel">
+              <a href="https://tobiassybesma.nl/" target="_blank">  <img class="logo img-fluid" src="images/logo.png" alt="Logo van goede doel"></a>
+
             </div>
             <div class="col-6 cause-text">
-                <p><strong><em>Zzzumi gaat naar de aarde</em> <br />steunt [naam doel]</strong></p>
+                <p><em>Zzzumi gaat naar de aarde</em> <br />steunt de <a href="https://tobiassybesma.nl/" target="_blank">Tobias Sybesma Foundation</a></p>
             </div>
           </div>
 
