--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         </p>
       </div>
     </a>
-
+<!--
   <div class="explain-text text-center">
     Klik op een planeet<br /> of scroll omlaag!
   </div>
-
+ -->
 
 
   </section>
@@ -311,21 +311,27 @@
   <section id="kleurplaten" class="section-dark sub-section container-fluid text-center">
     <h2>Klik op een kleurplaat om hem te downloaden</h2>
     <div class="row">
-      <div class="col-4">
+      <div class="col-3">
         <div class="kleurplaat-tegel">
           <a href="images/kleurplaat.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat.png" alt="Kleine kleurplaat van Zzzumi"> </a>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-3">
         <div class="kleurplaat-tegel">
-          <img class="img-fluid" src="images/kleurplaat.png" alt="Kleine kleurplaat van Zzzumi">
+          <a href="images/kleurplaat2.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat2.png" alt="Kleine kleurplaat van Zzzumi versie 2"> </a>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-3">
         <div class="kleurplaat-tegel">
-          <img class="img-fluid" src="images/kleurplaat.png" alt="Kleine kleurplaat van Zzzumi">
+          <a href="images/kleurplaat3.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat3.png" alt="Kleine kleurplaat van Zzzumi versie 3"> </a>
         </div>
       </div>
+      <div class="col-3">
+        <div class="kleurplaat-tegel">
+          <a href="images/kleurplaat4.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat4.png" alt="Kleine kleurplaat van Zzzumi versie 4"> </a>
+        </div>
+      </div>
+
     </div>
   </section>
 
