--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="row">
 
       <div class="col-sm-5">
-        <h2 class="subsection-header text-right">Wat kan je doen met de poster?</h2>
+        <h2 class="subsection-heading text-right">Wat kan je doen met de poster?</h2>
         <p class="text-right">
           Speel en leer nog meer met de poster van Zzzumi!<br />
           Ken jij alle dieren uit Zzzumi gaat naar de aarde?<br />
@@ -297,7 +297,7 @@
         <i class="fas fa-volume-up fa-7x"></i>
       </div>
       <div class="col-sm-8">
-        <h2 class="subsection-headert">Luisteren naar <br />'Zzzumi gaat naar de aarde'</h2>
+        <h2 class="subsection-heading">Luisteren naar <br />'Zzzumi gaat naar de aarde'</h2>
         <p>
           <br />
           Info over het luisterboek.
@@ -309,24 +309,24 @@
   </section>
 
   <section id="kleurplaten" class="section-dark sub-section container-fluid text-center">
-    <h2>Klik op een kleurplaat om hem te downloaden</h2>
+    <h2 class="subsection-heading">Klik op een kleurplaat om hem te downloaden</h2>
     <div class="row">
-      <div class="col-3">
+      <div class="col-6 col-sm-3">
         <div class="kleurplaat-tegel">
           <a href="images/kleurplaat.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat.png" alt="Kleine kleurplaat van Zzzumi"> </a>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-sm-3">
         <div class="kleurplaat-tegel">
           <a href="images/kleurplaat2.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat2.png" alt="Kleine kleurplaat van Zzzumi versie 2"> </a>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-sm-3">
         <div class="kleurplaat-tegel">
           <a href="images/kleurplaat3.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat3.png" alt="Kleine kleurplaat van Zzzumi versie 3"> </a>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-sm-3">
         <div class="kleurplaat-tegel">
           <a href="images/kleurplaat4.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat4.png" alt="Kleine kleurplaat van Zzzumi versie 4"> </a>
         </div>
@@ -342,7 +342,7 @@
         Hier komt de quiz
       </p>
     </div>
-    <h4>En maak kans op een prijs!</h4>
+    <h4 class="subsection-heading">En maak kans op een prijs!</h4>
   </section>
   <section id="auteur" class="section-dark sub-section container-fluid">
     <div class="row">
