--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+
   <section class="main-section container-fluid">
     <h1 class="main-title">Hallo! Ik ben <span class="title-span"><i>Zzzumi</i></span></h1>
 
@@ -114,20 +115,61 @@
         </p>
       </div>
     </a>
-<!--
-  <div class="explain-text text-center">
-    Klik op een planeet<br /> of scroll omlaag!
+
+  <div class="explain-text">
+    Klik op een planeet of scroll omlaag!
   </div>
- -->
+
 
 
   </section>
+
+
+
   <div class="span-container">
     <h1 class="mobile-title">Hallo! </h1>
     <h1 class="mobile-title2">Ik ben</h1>
     <h1 class="mobile-title mobile-span">Zzzumi </h1>
   </div>
+
+<div>
+
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#"><img class="brand-img" src="images/brand.png" alt=""></a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        
+        <li class="nav-item">
+          <a class="nav-link" href="#over-zzzumi">Over Zzzumi</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#boek">Het boek</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#behang">Over de poster</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#quiz">Speel de quiz</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#auteur">Over de schrijver</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+
+    </div>
+  </nav>
+
+
   <section id="over-zzzumi" class="section-light sub-section container-fluid">
+
+
+
     <div class="row">
       <div class="col-sm-5">
         <img class="img-fluid img-zzzumi-los" src="images/zzzumi-los.png" alt="Plaatje van Zzzumi">
@@ -396,6 +438,8 @@
       </div>
     </div>
   </section>
+
+</div>
   <footer class="section-dark sub-section container-fluid text-center">
     <i class="fas fa-copyright"></i> <a href="" target="_blank">Demanus Webdesign</a> | 2020
   </footer>
