--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
 </head>
 
 <body>
+ <div>
+
+
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-mobile">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand" href="#"><img class="brand-img" src="images/brand.png" alt=""></a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
+        <li class="nav-item">
+          <a class="nav-link" href="#over-zzzumi">Over Zzzumi</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#boek">Het boek</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#behang">Over de poster</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#quiz">Speel de quiz</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#auteur">Over de schrijver</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
+
+    </div>
+  </nav>
 
   <section class="main-section container-fluid">
     <h1 class="main-title">Hallo! Ik ben <span class="title-span"><i>Zzzumi</i></span></h1>
@@ -134,14 +167,14 @@
 
 <div>
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-desktop">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <a class="navbar-brand" href="#"><img class="brand-img" src="images/brand.png" alt=""></a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        
+
         <li class="nav-item">
           <a class="nav-link" href="#over-zzzumi">Over Zzzumi</a>
         </li>
@@ -438,7 +471,7 @@
       </div>
     </div>
   </section>
-
+</div>
 </div>
   <footer class="section-dark sub-section container-fluid text-center">
     <i class="fas fa-copyright"></i> <a href="" target="_blank">Demanus Webdesign</a> | 2020
