--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 </head>
 
 <body>
- <div>
 
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-mobile">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+
+  <nav class="navbar sticky-top navbar-expand-lg nav-mobile">
+    <button class="navbar-toggler text-center" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <span class="navbar-toggler-icon"></span> -->
+        <img class="brand-img" src="images/brand.png" alt="">
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#"><img class="brand-img" src="images/brand.png" alt=""></a>
+      <!-- <a class="navbar-brand" href="#"><img class="brand-img" src="images/brand.png" alt=""></a> -->
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
         <li class="nav-item">
@@ -167,7 +168,7 @@
 
 <div>
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark nav-desktop">
+  <nav class="navbar sticky-top navbar-expand-lg  nav-desktop">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -471,7 +472,7 @@
       </div>
     </div>
   </section>
-</div>
+
 </div>
   <footer class="section-dark sub-section container-fluid text-center">
     <i class="fas fa-copyright"></i> <a href="" target="_blank">Demanus Webdesign</a> | 2020
