--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
   <section id="auteur" class="section-dark sub-section container-fluid">
     <div class="row">
       <div class="col-sm-6 text-center">
-        <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/rj2dSAtpKOJJIygTiP3X4-ZQ4lbIHffsSTPqVAz64k6n_ZLmbmlSGpKmva_9FU6i7vYXcj_I5szyTyXla6bwlCEOF59qk8q83d7utzm6UllThxw8Ddy1hlyJom5rxaWzBMurgZz8cg"
+        <img class="img-fluid" src="images/janet.jpg"
           alt="Foto van Janet Korpershoek, de bedenker van Zzzumi">
       </div>
       <div class="col-sm-6">
