--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             <h2 class="subsection-heading text-right">Wat kan je doen met de poster?</h2>
             <p class="text-right">
               Speel en leer nog meer met de poster van Zzzumi!<br />
-              Ken jij alle dieren uit Zzzumi gaat naar de aarde?<br />
+              Ken jij alle dieren uit <em>Zzzumi gaat naar de aarde?</em><br />
               <br />
               De poster van Zzzumi is een statisch behang dat je aan elk glad oppervlak kan plakken, zoals een raam of een deur.<br />
               Er zit geen lijm op het behang. Daar zijn je ouders blij mee!<br />
@@ -378,18 +378,24 @@
         </div>
       </div>
     </section>
-    <section id="luisteren" class="section-light sub-section container-fluid">
+    <section id="luisteren" class="section-light container-fluid">
       <div class="row">
-        <div class="col-sm-4 text-center">
-          <i class="fas fa-volume-up fa-7x"></i>
-        </div>
-        <div class="col-sm-8">
-          <h2 class="subsection-heading">Luisteren naar <br />'Zzzumi gaat naar de aarde'</h2>
-          <p>
-            <br />
-            Info over het luisterboek.
+        <div class="col-lg-4  text-center">
+          <div class="">
+                  <i class="fas fa-volume-up fa-7x"></i>
+          </div>
 
-          </p>
+        </div>
+        <div class="col-lg-8 ">
+          <div class="luisterboek-text">
+            <h2 class="subsection-heading">Luisteren naar <br /><em>Zzzumi gaat naar de aarde</em></h2>
+            <p>
+              <br />
+              Info over het luisterboek.
+
+            </p>
+          </div>
+
         </div>
 
       </div>
@@ -398,22 +404,22 @@
     <section id="kleurplaten" class="section-dark sub-section container-fluid text-center">
       <h2 class="subsection-heading">Klik op een kleurplaat om hem te downloaden</h2>
       <div class="row">
-        <div class="col-6 col-sm-3">
+        <div class="col-6 col-lg-3">
           <div class="kleurplaat-tegel">
             <a href="images/kleurplaat.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat.png" alt="Kleine kleurplaat van Zzzumi"> </a>
           </div>
         </div>
-        <div class="col-6 col-sm-3">
+        <div class="col-6 col-lg-3">
           <div class="kleurplaat-tegel">
             <a href="images/kleurplaat2.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat2.png" alt="Kleine kleurplaat van Zzzumi versie 2"> </a>
           </div>
         </div>
-        <div class="col-6 col-sm-3">
+        <div class="col-6 col-lg-3">
           <div class="kleurplaat-tegel">
             <a href="images/kleurplaat3.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat3.png" alt="Kleine kleurplaat van Zzzumi versie 3"> </a>
           </div>
         </div>
-        <div class="col-6 col-sm-3">
+        <div class="col-6 col-lg-3">
           <div class="kleurplaat-tegel">
             <a href="images/kleurplaat4.png" target="_blank" download><img class="img-fluid" src="images/kleurplaat4.png" alt="Kleine kleurplaat van Zzzumi versie 4"> </a>
           </div>
